giving charts fixed height to resolve jumping UI problem

--- a/app/stylesheets/application.sass
+++ b/app/stylesheets/application.sass
@@ -109,6 +109,9 @@ input.title
   &:focus
     background-color: $yellow
 
+#rendered-chart
+  height: 400px
+
 .field
   margin-bottom: 20px
 
